<resources>
    <string name="app_name">Silent moon</string>
    <string name="SilentMoon">Silent Moon</string>
    <string name="Dune"> In the week before their departure to Arrakis, when all the final scurrying about had reached a nearly unbearable frenzy, an old crone came to visit the mother of the boy, Paul.
   It was a warm night at Castle Caladan, and the ancient pile of stone that had served the Atreides family as home for twenty-six generations bore that cooled-sweat feeling it acquired before a change in the weather.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_in">ALREADY HAVE AN ACCOUNT? LOG IN</string>
    <string name="using_silent_moon">Thousand of people are using silent moon for smalls meditation</string>
    <string name="what_we_do">We are what we do</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_up_email">OR SIGN UP WITH EMAIL</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="policy">I HAVE READ THE PRIVACE POLICY</string>
    <string name="log_inn">LOG IN</string>
    <string name="log_in_email">OR LOG IN WITH EMAIL</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="already_up">ALREADY HAVE AN ACCOUNT? SIGN UP</string>
    <string name="welcomeSM">Hi Afsar, Welcome to Silent Moon</string>
    <string name="explore_the_app">Explore the app, Find some peace of mind to prepare for meditation.</string>
    <string name="get_started">GET STARTED</string>
    <string name="what_brings">What Brings you to Silent Moon?</string>
    <string name="choose_topic">choose a topic to focuse on:</string>
    <string name="what_time">What time would you like to meditate?</string>
    <string name="any_time">Any time you can choose but We recommend first thing in th morning.</string>
    <string name="which_day">Which day would you like to meditate?</string>
    <string name="every_best">Everyday is best, but we recommend picking at least five.</string>
    <string name="no_thanks">NO THANKS</string>
    <string name="save">SAVE</string>
    <string name="we_wish">We Wish you have a good day</string>
    <string name="good_morning">Good Morning, Afsar</string>
    <string name="recommended">Recommended for you</string>
    <string name="happy">Happy Morning</string>
    <string name="course">COURSE</string>
    <string name="ease_mind">Ease the mind into a restful night’s sleep  with these deep, amblent tones.</string>
    <string name="favorites">24.234 Favorites</string>
    <string name="listening">34.234 Listening</string>
    <string name="pick_navigator">Pick a Navigator</string>
    <string name="focus_att">Focus Attention</string>
    <string name="seven_days">7 DAYS OF CALM</string>
    <string name="meditate">Meditate</string>
    <string name="we_can">we can learn how to recognize when our minds are doing their normal everyday acrobatics.</string>
    <string name="menu_home">Home</string>
    <string name="menu_sleep">Sleep</string>
    <string name="menu_meditate">Meditate</string>
    <string name="menu_music">Music</string>
    <string name="menu_name">Name</string>
    <string name="sleep_stories">Sleep Stories</string>
    <string name="soothing_bedtime">Soothing bedtime stories to help you fall into a deep and natural sleep</string>
    <string name="sleep_music">Sleep Music</string>
    <string name="night_island">Night Island</string>
    <string name="min_45">45 MIN * SLEEP MUSIC</string>
    <string name="else_the_mind">Ease the mind into a restful night’s sleep with these deep, amblent tones.</string>
    <string name="related">Related</string>
    <string name="play">PLAY</string>
    <string name="sleep_music_big">SLEEP MUSIC</string>
    <string name="welcome_sleep">Welcome to Sleep</string>
    <string name="explore_the_new">Explore the new king of sleep. It uses sound and vesualization to create perfect conditions for refreshing sleep.</string>
    <string name="su">SU</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="th">TH</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="male">MALE VOICE</string>
    <string name="female">FEMALE VOICE</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>