<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sleep_back">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".signing.welcome_sleep.WelcomeSleepFragment">

        <ImageView
            android:id="@+id/img_welcome_sleep_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_welcome_sleep_back"
            android:scaleType="fitStart"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/welcome_sleep"
            style="@style/welcome_style"
            android:text="@string/welcome_sleep"
            android:layout_marginTop="155dp"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/explore_the_new"
            style="@style/sleep_helve_light"
            android:text="@string/explore_the_new"

            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_sleep" />

        <ImageView
            android:id="@+id/img_birds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/img_birds"
            android:scaleType="fitEnd"
            android:layout_marginTop="68dp"
            android:layout_marginStart="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/explore_the_new" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_started_2"
            style="@style/Button"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="150dp"
            android:text="@string/get_started"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_birds" />

        <ImageView
            android:id="@+id/line_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_line_1"
            android:scaleType="center"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="14dp"
            android:layout_marginHorizontal="135dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_started_2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>



