<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sleep_back">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".signing.PlayOptionActivity">

        <ImageView
            android:id="@+id/img_sleep_back_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"

            android:src="@drawable/img_sleep_back_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_back_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:onClick="onClickGoBack"
            android:src="@drawable/img_back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_button_download_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_button_download_2"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_button_heart_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_button_heart_2"

            app:layout_constraintEnd_toStartOf="@+id/ic_button_download_2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sleep_style_2"
            style="@style/sleep_style_island"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/night_island"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_sleep_back_2" />


        <TextView
            android:id="@+id/min_45"
            style="@style/helvetica_med_14"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/min_45"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sleep_style_2" />

        <TextView
            android:id="@+id/else_the_mind"
            style="@style/helvetica_light_16"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:text="@string/else_the_mind"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/min_45" />

        <ImageView
            android:id="@+id/heart_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/img_heart_music"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/else_the_mind" />

        <TextView
            android:id="@+id/related"
            style="@style/helvetic_med_24"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/related"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heart_music" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/my_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/related"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:id="@+id/ic_sleep_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_sleep_01"

                app:layout_constraintEnd_toStartOf="@+id/ic_sleep_02"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/ic_sleep_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sleep_02"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ic_sleep_01"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/PLAY"
            style="@style/Button"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="onClickGoPlay"

            android:text="@string/play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_pic" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>